--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -1431,6 +1431,125 @@
             </objects>
             <point key="canvasLocation" x="1790" y="-300"/>
         </scene>
+        <!--Big Image View Controller-->
+        <scene sceneID="tDU-Wp-366">
+            <objects>
+                <viewController storyboardIdentifier="ZXBigImageViewController" id="juY-Pq-CIB" customClass="ZXBigImageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nGy-3A-Si0"/>
+                        <viewControllerLayoutGuide type="bottom" id="xmS-ej-gj3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eQy-7u-AsJ">
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UMP-0d-uPc">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FeC-SS-d9m">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="536" id="HXg-DP-Zq6"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="FeC-SS-d9m" secondAttribute="bottom" id="br6-il-n5k"/>
+                                    <constraint firstItem="FeC-SS-d9m" firstAttribute="top" secondItem="UMP-0d-uPc" secondAttribute="top" id="qme-DN-wrY"/>
+                                    <constraint firstItem="FeC-SS-d9m" firstAttribute="width" secondItem="UMP-0d-uPc" secondAttribute="width" id="r6A-A2-Ftv"/>
+                                    <constraint firstItem="FeC-SS-d9m" firstAttribute="leading" secondItem="UMP-0d-uPc" secondAttribute="leading" id="s7X-QM-7o7"/>
+                                    <constraint firstAttribute="trailing" secondItem="FeC-SS-d9m" secondAttribute="trailing" id="srW-Cs-he5"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UMP-0d-uPc" firstAttribute="leading" secondItem="eQy-7u-AsJ" secondAttribute="leadingMargin" constant="-16" id="EPC-xK-fzo"/>
+                            <constraint firstItem="UMP-0d-uPc" firstAttribute="top" secondItem="nGy-3A-Si0" secondAttribute="bottom" id="RAN-NL-jFD"/>
+                            <constraint firstItem="xmS-ej-gj3" firstAttribute="top" secondItem="UMP-0d-uPc" secondAttribute="bottom" id="dTm-Qm-fBa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UMP-0d-uPc" secondAttribute="trailing" constant="-16" id="pat-cC-szn"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageHeight" destination="HXg-DP-Zq6" id="aLc-r2-8NV"/>
+                        <outlet property="imageView" destination="FeC-SS-d9m" id="nod-5I-nBK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Le0-4G-mad" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1790" y="368"/>
+        </scene>
+        <!--Blank School View Controller-->
+        <scene sceneID="Wiq-05-63W">
+            <objects>
+                <viewController storyboardIdentifier="ZXBlankSchoolViewController" id="C9o-hJ-azi" customClass="ZXBlankSchoolViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qcC-8F-mRs"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jhg-f1-5FI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Hdu-YF-gLr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MX9-Dt-zTk">
+                                <rect key="frame" x="149" y="175" width="303" height="249"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="school_blank" translatesAutoresizingMaskIntoConstraints="NO" id="iGD-jG-YT7">
+                                        <rect key="frame" x="107" y="0.0" width="89" height="92"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="92" id="Ybi-au-uM3"/>
+                                            <constraint firstAttribute="width" constant="89" id="lAa-Dy-fGX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你还没有加入学校" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ge-NW-H5A">
+                                        <rect key="frame" x="71" y="123" width="160" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="为保证安全，只有被老师添加后才能进入学校哦~" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJm-Sl-9zh">
+                                        <rect key="frame" x="0.0" y="164" width="303" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.81568627450980391" green="0.81568627450980391" blue="0.81568627450980391" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEM-Zx-vL4">
+                                        <rect key="frame" x="49" y="204" width="205" height="37"/>
+                                        <state key="normal" title="如何加入班级" backgroundImage="school_bt_blank">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="joinSchool:" destination="Ssj-zi-RwS" eventType="touchUpInside" id="Aes-IW-oWp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="LEM-Zx-vL4" firstAttribute="top" secondItem="xJm-Sl-9zh" secondAttribute="bottom" constant="23" id="8u6-Gd-6QU"/>
+                                    <constraint firstAttribute="bottom" secondItem="LEM-Zx-vL4" secondAttribute="bottom" constant="8" id="9YJ-b9-tSX"/>
+                                    <constraint firstItem="iGD-jG-YT7" firstAttribute="top" secondItem="MX9-Dt-zTk" secondAttribute="top" id="BFg-Nx-9D0"/>
+                                    <constraint firstAttribute="centerX" secondItem="2ge-NW-H5A" secondAttribute="centerX" id="Jjc-fC-UUy"/>
+                                    <constraint firstAttribute="width" constant="303" id="UsG-Ie-qRr"/>
+                                    <constraint firstItem="2ge-NW-H5A" firstAttribute="top" secondItem="iGD-jG-YT7" secondAttribute="bottom" constant="31" id="Yh1-gj-T3n"/>
+                                    <constraint firstAttribute="centerX" secondItem="LEM-Zx-vL4" secondAttribute="centerX" id="iql-Ej-Y9F"/>
+                                    <constraint firstAttribute="centerX" secondItem="iGD-jG-YT7" secondAttribute="centerX" id="oWm-cT-cTq"/>
+                                    <constraint firstItem="xJm-Sl-9zh" firstAttribute="top" secondItem="2ge-NW-H5A" secondAttribute="bottom" constant="17" id="sRJ-wR-ZfB"/>
+                                    <constraint firstAttribute="centerX" secondItem="xJm-Sl-9zh" secondAttribute="centerX" id="sVc-qp-GfY"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="MX9-Dt-zTk" secondAttribute="centerY" id="Ce2-JE-m1U"/>
+                            <constraint firstAttribute="centerX" secondItem="MX9-Dt-zTk" secondAttribute="centerX" id="R2g-r8-309"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ssj-zi-RwS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1790" y="1023"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bg_selection" width="90" height="25"/>
@@ -1439,6 +1558,8 @@
         <image name="btn_image_add" width="110" height="110"/>
         <image name="dynamic_ic_fav" width="16" height="14"/>
         <image name="dynamic_ic_faved" width="16" height="14"/>
+        <image name="school_blank" width="89" height="92"/>
+        <image name="school_bt_blank" width="205" height="37"/>
         <image name="summary_ic_address" width="11" height="13"/>
         <image name="summary_ic_info" width="11" height="13"/>
         <image name="summary_ic_phone" width="12" height="12"/>
